--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,7 @@
     "test:unit": "vitest",
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
-    "lint:oxlint": "oxlint . --fix -D correctness --ignore-path .gitignore",
-    "lint:eslint": "eslint . --fix",
-    "lint": "run-s lint:*",
+    "lint": "eslint . --fix",
     "format": "prettier --write src/"
   },
   "dependencies": {
@@ -24,7 +22,6 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@prettier/plugin-oxc": "^0.0.4",
     "@tsconfig/node22": "^22.0.2",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.18.6",
@@ -35,12 +32,10 @@
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.8.1",
     "eslint": "^9.33.0",
-    "eslint-plugin-oxlint": "~1.11.0",
     "eslint-plugin-vue": "~10.4.0",
     "jiti": "^2.5.1",
     "jsdom": "^27.0.0",
     "npm-run-all2": "^8.0.4",
-    "oxlint": "~1.11.0",
     "prettier": "3.6.2",
     "typescript": "~5.9.0",
     "vite": "^7.1.7",
